FIX: video on mobile

--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -769,7 +769,10 @@
       width: 740px;
 
       @include mobile {
-        display: none;
+        margin-top: 60px;
+        width: 90vw;
+        margin-left: 0px;
+        margin-bottom: 30px;
       }
 
       video {
@@ -778,8 +781,13 @@
         width: 585px;
         left: 75px;
         top: -30px;
+
         @include mobile {
-          display: none;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          width: 70vw;
+          top: -16px;
         }
       }
     }
@@ -787,8 +795,9 @@
     .mobile-frame {
       display: none;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: center;
       margin-bottom: 40px;
+      padding-top: 30px;
 
       @include mobile {
         display: flex;
@@ -798,23 +807,23 @@
         width: 90%;
         position: relative;
         overflow: hidden;
-        margin-right: -50px;
+        // margin-right: -50px;
 
-        &::before {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0px;
-          top: 0;
-          background: linear-gradient(
-            170.48deg,
-            #1c1c1c 17.61%,
-            rgba(28, 28, 28, 0.849282) 68.62%,
-            rgba(28, 28, 28, 0.32) 82.66%
-          );
-          z-index: 1;
-        }
+        // &::before {
+        //   content: "";
+        //   position: absolute;
+        //   width: 100%;
+        //   height: 100%;
+        //   left: 0px;
+        //   top: 0;
+        //   background: linear-gradient(
+        //     170.48deg,
+        //     #1c1c1c 17.61%,
+        //     rgba(28, 28, 28, 0.849282) 68.62%,
+        //     rgba(28, 28, 28, 0.32) 82.66%
+        //   );
+        //   z-index: 1;
+        // }
       }
     }
 
